--- a/login.html
+++ b/login.html
@@ -101,12 +101,22 @@
             </div>
         </div>
     </nav>
-    <div>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-    </div>    
+  
+    
+<!-- login -->
+<form class="row g-3">
+    <div class="col-auto">
+      <label for="email" class="visually-hidden">Email</label>
+      <input type="email" readonly class="form-control-plaintext" id="email" value="email@example.com">
+    </div>
+    <div class="col-auto">
+      <label for="inputPassword2" class="visually-hidden">Password</label>
+      <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+    </div>
+  </form>
 
 
    
