--- a/index.html
+++ b/index.html
@@ -101,12 +101,28 @@
             </div>
         </div>
     </nav>
-    <div>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, officia aliquam id est exercitationem itaque consequatur ea sed nemo cupiditate illo recusandae reprehenderit ducimus. Nobis iusto repudiandae nam vero nulla.</p>
-    </div>    
+   
+    <div class="row m-5">
+      <div class="col-sm-6 mt-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary mt-3">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 mt-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary mt-3">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
 
 
    
