--- a/login.html
+++ b/login.html
@@ -104,19 +104,24 @@
   
     
 <!-- login -->
-<form class="row g-3">
-    <div class="col-auto">
-      <label for="email" class="visually-hidden">Email</label>
-      <input type="email" readonly class="form-control-plaintext" id="email" value="email@example.com">
-    </div>
-    <div class="col-auto">
-      <label for="inputPassword2" class="visually-hidden">Password</label>
-      <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-    </div>
-    <div class="col-auto">
-      <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
-    </div>
-  </form>
+
+<form class="col g-3 mt-5 mb-5 ml-5 mr-5 ">
+
+  <div class="col-6">
+    <label for="email" class="form-label">Email</label>
+    <input type="email" class="form-control" id="email">
+  </div>
+
+  <div class="col-6">
+    <label for="password" class="form-label">Password</label>
+    <input type="password" class="form-control" id="password4">
+  </div>
+
+
+  <div class="col-6 mt-3">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+</form>
 
 
    
