--- a/login1.html
+++ b/login1.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bamboo-based Agroforestry</title>
    
- 
+      <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="bootstrap.min.css">
@@ -54,21 +55,31 @@
       <!-- top navbar end -->
 
     <!-- log in start -->
-    <form >
-        <div class=" mx-auto m-5 w-75">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <div class="container mt-5 pt-5  mb-5">
+        <div class="row">
+            <div class="col-12 col-sm-8 col-md-6 m-auto">
+                <div class="card border-0 shadow">
+                    <div class="card-body">
+                       <div class="text-center my-3"> <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16" >
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                          </svg>
+                        </div>
+                        <form action="">
+                            <input type="text" name="" id="" placeholder="Username" class="form-control my-4 py-2">
+                            <input type="password" name="" id="" placeholder="Password" class="form-control my-4 py-2">
+                            <div class="text-center mt-3">
+                                <button class="btn btn-primary">Login</button>
+                                <a href="" class="nav-link  mt-3">Already have an account ?</a>
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="mx-auto m-5 w-75">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mx-auto m-5 w-75">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        
-      </form>
+    </div>
 
     <!-- log in stop -->
 
