--- a/company.html
+++ b/company.html
@@ -57,18 +57,10 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">contact Us</a>
                 </li>
-                <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Services
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="invest.html">Investment</a>
-                        <a class="dropdown-item" href="#">Propagation</a>
-                        <a class="dropdown-item" href="#">Processing</a>
-                        <a class="dropdown-item" href="#">Plantation</a>
-
-                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="services.html">Services</a>
+                  </li>
+       
                 <li class="nav-item dropdown ative">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
