--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
    <!-- topnav start -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
-      <a class="navbar-brand" href="#">Bamboo</a>
+      <img src="images/logo2.png" style="height: 80px; width: 140px;">
+      <!-- <a class="navbar-brand" href="#">Bamboo</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -56,23 +57,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav mr-auto">
             <li class="nav-item active ">
-               <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
+               <a class="nav-link ml-3" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                <a class="nav-link" href="#contact">contact Us</a>
             </li>
-            <li class="nav-item dropdown active">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Services
-               </a>
-               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="invest.html">Investment</a>
-                  <a class="dropdown-item" href="#">Propagation</a>
-                  <a class="dropdown-item" href="#">Processing</a>
-                  <a class="dropdown-item" href="#">Plantation</a>
-
-            </li>
+            <li class="nav-item active">
+               <a class="nav-link" href="services.html">Services</a>
+             </li>
+      
             <li class="nav-item dropdown ative">
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
@@ -116,7 +109,7 @@
 
          <div class="carousel-item active">
             <img class="d-block w-100 w3-height-auto w3-width-100%" src="images/3.jpg" alt="Second slide"
-               style="height: 600px; ">
+               style="height: 900px; ">
             <div class="carousel-caption d-md-block pt-5">
                <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">Lorem
                   ipsum dolor sit amet consectetur </h3>
@@ -125,7 +118,7 @@
             </div>
          </div>
          <div class="carousel-item">
-            <img class="d-block w-100" src="images/cofee.jpg" alt="Third slide" style="height: 600px; ">
+            <img class="d-block w-100" src="images/cofee.jpg" alt="Third slide" style="height: 900px; ">
             <div class="carousel-caption d-md-block  pt-5">
                <h5 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">Lorem
                   ipsum dolor sit amet consectetur </h3>
@@ -134,7 +127,7 @@
             </div>
          </div>
          <div class="carousel-item">
-            <img class="d-block w-100" src="images/4.jpg" alt="Third slide" style="height: 600px; font-size: xx-large;">
+            <img class="d-block w-100" src="images/4.jpg" alt="Third slide" style="height: 900px; font-size: xx-large;">
             <div class="carousel-caption d-md-block pt-5">
                <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff"> Lorem
                   ipsum dolor sit amet consectetur </h3>
@@ -156,7 +149,7 @@
    <!-- slider end -->
 
    <!-- start of info -->
-   <div class="container mb-5 mx-auto">
+   <div class="container mb-5 mx-auto mt-5">
      
       <div class="row mx-auto">
          <div class="col-12 col-sm-8 col-md-6 mb-3 mx-auto">
@@ -292,7 +285,7 @@
    </div>
 
    <!-- projects -->
-   <div style="background-image: url('images/4.jpg'); background-size: cover; height: 430px;" class="m-5">
+   <div style="background-image: url('images/4.jpg'); background-size: cover; height: 430px;" class="m-5 w-75 mx-auto">
       <div style="padding: 180px 0 0 10px;">
 
          <h2 style="color: #fff;">Questions We are Here to Help</h2>
@@ -305,15 +298,15 @@
 
    <!-- projects end-->
    <!-- balance -->
-   <div class="balance">
+   <div class="balance w-75 mx-auto">
       <div class="container-fluid">
-         <div class="row d_flex">
+         <div class="row d_flex w-75">
             <div class="col-md-5 padding_left0">
                <div class="yoga_img">
                   <figure><img src="images/4.jpg" style="height: 400px;"></figure>
                </div>
             </div>
-            <div class="col-md-6 offset-md-1">
+            <div class="col-md-6 offset-md-1 w-50">
                <div class="titlepage">
                   <h2 class="padd_top30">Mind in Balance</h2>
                   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
