--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
 
    
    <!-- core values -->
-<div class="card-4 text-white bg-danger mx-auto" style="max-width: 60rem;">
+<div class="card-4 text-black mx-auto" style="max-width: 60rem; background-color: #fff3f3;">
    <div class="card-body">
 
    <table class="table table-striped mt-3 mb-5 w-50 mx-auto text-center">
       <thead>
          <tr>
-            <th scope="col"><h2 style="color: aliceblue;">CORE VALUES</h2></th>
+            <th scope="col"><h2 style="color: black;">CORE VALUES</h2></th>
 
          </tr>
 
@@ -263,7 +263,7 @@
          <div class="col-sm">
             <div class="card border-0 shadow mr-3 mb-3">
                <div class="card-body mr-3 ">
-                  <img src="images/2.jpg" alt="">
+                  <img src="images/cofee.jpg" alt="">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ipsam aspernatur impedit. Ab
                      quae, nesciunt earum vitae qui dolor veritatis corporis nulla magnam minima exercitationem
                      quibusdam, mollitia rerum laborum. Voluptate.</p>
@@ -273,7 +273,7 @@
          <div class="col-sm">
             <div class="card border-0 shadow mr-3">
                <div class="card-body mr-3">
-                  <img src="images/2.jpg" alt="">
+                  <img src="images/4.jpg" style="height: 300px;">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ipsam aspernatur impedit. Ab
                      quae, nesciunt earum vitae qui dolor veritatis corporis nulla magnam minima exercitationem
                      quibusdam, mollitia rerum laborum. Voluptate.</p>
@@ -306,7 +306,7 @@
                   <figure><img src="images/4.jpg" style="height: 400px;"></figure>
                </div>
             </div>
-            <div class="col-md-6 offset-md-1 w-50">
+            <div class="col-md-6 offset-md-1">
                <div class="titlepage">
                   <h2 class="padd_top30">Mind in Balance</h2>
                   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
