--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
    <!-- topnav start -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
-      <a class="navbar-brand" href="#">Bamboo</a>
+      <a class="navbar-brand" href="index.html">Bamboo</a>
       <!-- <img src="images/logo2.png" style="height: 80px; width: 140px;"> -->
       <!-- <a class="navbar-brand" href="#">Bamboo</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -88,7 +88,7 @@
             </li> -->
 
             <li class="nav-item active">
-               <a class="nav-link" href="#">Propagation</a>
+               <a class="nav-link" href="propagation.html">Propagation</a>
             </li>
 
             <li class="nav-item active">
@@ -99,7 +99,7 @@
                <a class="nav-link" href="#contact">Get in Touch</a>
             </li>
             <!-- <li class="nav-item active">
-               <a class="nav-link" href="services.html">Services</a>
+               <a class="nav-link" href="propagation.html">Services</a>
              </li>
       
          
