--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
                     <a class="nav-link" href="contact.html">contact Us</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="propagation.html">Services</a>
                   </li>
           
                 <li class="nav-item dropdown ative">
