--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/logo1.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -229,6 +229,7 @@
   </div>
  
 </div>
+<br>
 
 <!-- Our focus end-->
 
@@ -271,7 +272,7 @@
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
-        <h1 class="w3-blue">From seedling to value added product</h1>
+        
         <p>Our processing operation envisages to develop state-of-the-Art infrastructure & technology in the agro-processing industry and facilitate end to end linkage, from the farmer to the consumer. It aims to provide a mechanism to link agricultural production to the market by bringing together farmers, processors and retailers so as to ensure maximizing value addition, minimizing wastage, increasing farmers income and creating employment opportunities particularly in the rural sector.</p>
      </div>
     </div>
