--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- Responsive-->
    <link rel="stylesheet" href="css/responsive.css">
    <!-- fevicon -->
-   <link rel="icon" href="images/fevicon.png" type="image/gif" />
+   <link rel="icon" href="images/logo1.png" type="image/gif" />
    <!-- Scrollbar Custom CSS -->
    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
    <!-- Tweaks for older IEs-->
@@ -92,11 +92,11 @@
             </li>
 
             <li class="nav-item active">
-               <a class="nav-link" href="#contact">Processing</a>
+               <a class="nav-link" href="processing.html">Processing</a>
             </li>
-
+            
             <li class="nav-item active">
-               <a class="nav-link" href="#contact">Get in Touch</a>
+               <a class="nav-link" href="contact.html">Get in Touch</a>
             </li>
             <!-- <li class="nav-item active">
                <a class="nav-link" href="propagation.html">Services</a>
