--- a/propagation.html
+++ b/propagation.html
@@ -47,7 +47,7 @@
 
     <!-- topnav start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar_top">
-      <a class="navbar-brand" href="index.html">Bamboo</a>
+     <a href="index.html"> <img src="images/log.png" alt="" height=""> &nbsp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
