--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- Responsive-->
    <link rel="stylesheet" href="css/responsive.css">
    <!-- fevicon -->
-   <link rel="icon" href="images/logo1.png" type="image/gif" />
+   <link rel="icon" href="images/log.png" type="image/gif" />
    <!-- Scrollbar Custom CSS -->
    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
    <!-- Tweaks for older IEs-->
@@ -48,7 +48,7 @@
    <!-- topnav start -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
      <a href="index.html"> <img src="images/log.png" alt="" height=""> &nbsp</a>
-
+   
       <!-- <img src="images/logo2.png" style="height: 80px; width: 140px;"> -->
       <!-- <a class="navbar-brand" href="#">Bamboo</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
