--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
          </div>
          <div class="carousel-item">
-            <img class="d-block w-100" src="images/4.jpg" alt="Third slide" style="height: 900px; font-size: xx-large;">
+            <img class="d-block w-100" src="images/bg12.png" alt="Third slide" style="height: 900px; font-size: xx-large;">
             <div class="carousel-caption d-md-block pt-5">
                <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff"> Lorem
                   ipsum dolor sit amet consectetur </h3>
