--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="carousel-inner">
 
          <div class="carousel-item active">
-            <img class="d-block w-100 w3-height-auto w3-width-100%" src="images/3.jpg" alt="Second slide"
+            <img class="d-block w-100 w3-height-auto w3-width-100%" src="images/bg12.png" alt="Second slide"
                style="height: 900px; ">
             <div class="carousel-caption d-md-block pt-5">
                <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">Lorem
@@ -152,7 +152,7 @@
             </div>
          </div>
          <div class="carousel-item">
-            <img class="d-block w-100" src="images/bg12.png" alt="Third slide" style="height: 900px; font-size: xx-large;">
+            <img class="d-block w-100" src="images/3.png" alt="Third slide" style="height: 900px; font-size: xx-large;">
             <div class="carousel-caption d-md-block pt-5">
                <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff"> Lorem
                   ipsum dolor sit amet consectetur </h3>
