--- a/index.html
+++ b/index.html
@@ -195,14 +195,7 @@
                <div class="card-body">
                   <div class="row" style="padding: 20px;">
                      TIGPE builds and manages agriculture projects and enabling infrastructure and services through 
-                     investment, propagation and plantation, and processing.Our investment platform, Ethifin, is approved and 
-                     regulated to serve ordinary people, high-net-worth individuals, corporates and institutions. Ethifin, 
-                     regulated by Uganda Capital Market Authority, is an Ethical Private Capital Marketplace platform that 
-                     focuses on sustainable and impact-driven crowd-investments and financing. We are best known for our impact 
-                     investment Rolling Fund which has been operational since 2022. Ethifin offers access to investment opportunities
-                      in distinctive and promising businesses while also serving
-                      as a platform for entrepreneurs to showcase their ventures to a community of global investors.
-                  </div>
+                     investment, propagation and plantation, and processing.</div>
                   <hr>
               
 
