--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="nav-item dropdown ative">
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Investments
+                  Investment
                </a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="invest.html">About</a>
@@ -209,12 +209,12 @@
    <!-- projects -->
    <div class="container">
       <table class="table table-striped mt-3 mb-5 w-50 mx-auto text-center">
-         <thead>
+         <!-- <thead>
             <tr>
                <th scope="col"> <h2>Funded Offerrings</h2></th>
             </tr>
          </thead>
-         </table>
+         </table> -->
       
    
       <div class="row">
@@ -271,7 +271,7 @@
    <!-- projects -->
    
    <!-- core values -->
-<div class="card-4 text-black mx-auto" style="max-width: 60rem; background-color: #fff3f3;">
+<!-- <div class="card-4 text-black mx-auto" style="max-width: 60rem; background-color: #fff3f3;">
    <div class="card-body">
 
    <table class="table table-striped mt-3 mb-5 w-50 mx-auto text-center">
@@ -315,7 +315,7 @@
    </table>
 </div>
 </div>
-<br>
+<br> -->
    <!-- core values end -->
 
 
