--- a/propagation.html
+++ b/propagation.html
@@ -71,7 +71,7 @@
             <li class="nav-item dropdown ative">
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Investments
+                  Investment
                </a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="invest.html">About</a>
