--- a/index.html
+++ b/index.html
@@ -318,7 +318,17 @@
 <br> -->
    <!-- core values end -->
 
-
+   <div class="container">
+      <table class="table table-striped mt-3 mb-5 w-50 mx-auto text-center">
+         <thead>
+            <tr>
+               <th scope="col"> <h2>Funded Offerrings</h2></th>
+            </tr>
+         </thead>
+      </table>
+      </div>
+      
+   </div>
    <div style="background-image: url('images/4.jpg'); background-size: cover; height: 430px;" class="m-5 w-75 mx-auto">
       <div style="padding: 180px 0 0 10px;">
 
