--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <h3>About Us</h3>
             <div class="card border-0 shadow">
                <div class="card-body">
-                  <div class="row" style="padding: 20px;">
+                  <div class="row" style="padding: 20px; font-size: 20px; text-align: center;">
                      TIGPE builds and manages agriculture projects and enabling infrastructure and services through 
                      investment, propagation and plantation, and processing.</div>
                   <hr>
