--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <table class="table table-striped mt-3 mb-5 w-50 mx-auto text-center">
          <thead>
             <tr>
-               <th scope="col"> <h2>Funded Offerrings</h2></th>
+               <th scope="col"> <h2>Investments</h2></th>
             </tr>
          </thead>
       </table>
