--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
 
          </div> -->
          <div class="col-12 col-sm-8 col-md-12 mx-auto">
-            <h3>About Us</h3>
+            <center>
+            <h3 styles="text-align: center;">About Us</h3></center>
             <div class="card border-0 shadow">
                <div class="card-body">
                   <div class="row" style="padding: 20px; font-size: 20px; text-align: center;">
