pagnation and plantation added

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                <li class="nav-item dropdown ative">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                      aria-haspopup="true" aria-expanded="false">
-                     Investments
+                     Investment
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                      <a class="dropdown-item" href="invest.html">About</a>
@@ -85,6 +85,10 @@
                   <a class="nav-link" href="propagation.html">Propagation</a>
                </li>
    
+               <li class="nav-item active">
+                  <a class="nav-link" href="plantation.html">Plantation</a>
+               </li>
+               
                <li class="nav-item active">
                   <a class="nav-link" href="processing.html">Processing</a>
                </li>
@@ -109,7 +113,6 @@
                   </div>
    
                </li> -->
-   
             </ul>
             <div class="navbar-nav active">
                <a href="login.html" class="nav-item nav-link">Login</a>
