--- a/plantation.html
+++ b/plantation.html
@@ -52,6 +52,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown ative">
@@ -63,7 +64,7 @@
                   <a class="dropdown-item" href="about.html">About Us</a>
                   <a class="dropdown-item" href="#">Impact</a>
                   <a class="dropdown-item" href="#">New</a>
-                  <a class="dropdown-item" href="partner.html">Partners</a>
+                  <a class="dropdown-item" href="#">Partners</a>
                </div>
 
             </li>
@@ -87,15 +88,13 @@
             <li class="nav-item active">
                <a class="nav-link" href="propagation.html">Propagation</a>
             </li>
-
             <li class="nav-item active">
-               <a class="nav-link" href="plantation.html">Plantation</a>
-            </li>
-            
+                <a class="nav-link" href="plantation.html">Plantation</a>
+             </li>
+
             <li class="nav-item active">
                <a class="nav-link" href="processing.html">Processing</a>
             </li>
-            
             <li class="nav-item active">
                <a class="nav-link" href="contact.html">Get in Touch</a>
             </li>
