--- a/invest.html
+++ b/invest.html
@@ -89,6 +89,11 @@
                   <a class="nav-link" href="propagation.html">Propagation</a>
                </li>
    
+               
+            <li class="nav-item active">
+                <a class="nav-link" href="plantation.html">Plantation</a>
+             </li>
+             
                <li class="nav-item active">
                 <a class="nav-link" href="processing.html">Processing</a>
              </li>
