--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
          <div class="col-sm">
             <div class="card border-0 shadow mr-3 mb-3">
                <div class="card-body mr-3 ">
-                  <h3>Investments</h3>
+                  <h3>Investment</h3>
                   <img src="images/4.jpg" style="height: 300px;">
                   <p>Our investment platform,  We are best
                        known for our impact investment Rolling Fund which has been operational since 2022. Ethifin offers access to
