--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             </tr>
          </thead>
       </table>
-      <center> <p>Matching the world to Profitable Impact Investments in Rural Businesses in Uganda" below</p></center>
+      <center> <p style="font-size:17px;">Matching the world to Profitable Impact Investments in Rural Businesses in Uganda"</p></center>
       </div>
       
    </div>
@@ -381,7 +381,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2>What Says Pepole</h2>
+                  <h2>What Pepole say</h2>
                   <span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy </span>
                </div>
             </div>
