--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
 
    <!-- pepole -->
-   <div class="pepole">
+   <!-- <div class="pepole">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
@@ -470,7 +470,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
    <!-- end pepole -->
    <!--  contact -->
    <div class="contact" id="contact">
