--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             </tr>
          </thead>
       </table>
-      <center> <p style="font-size:17px;">Matching the world to Profitable Impact Investments in Rural Businesses in Uganda"</p></center>
+      <center> <p style="font-size:17px;">Matching the world to Profitable Impact Investments in Rural Businesses in Uganda</p></center>
       </div>
       
    </div>
