--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   <img src="images/4.jpg" style="height: 300px;">
                   <p>Our investment platform, Ethifin offers access to
                      investment opportunities in distinctive and promising businesses while also serving as a platform for entrepreneurs 
-                  to showcase their ventures to a community of global investors. We are best known for our impact investment Rolling Fund which has been operational since 2022. </p>
+                  to showcase their ventures to a community of global investors. We are best known for our impact investment Rolling Fund.</p>
                      <a class="read_more ye_b5n " href="invest.html"> Read More</a>
                </div>
             </div>
