--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
        <div class="card border-0 shadow" style="height: 100%; background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/2.jpg);">
           <div class="card-body" style="color: white;">
              
-             <p>TIGPE builds and manages agriculture projects and enabling infrastructure and services through investment, propagation and plantation, and processing.<br>Our investment platform, Ethifin, is approved and regulated to serve ordinary people, high-net-worth individuals, corporates and institutions. Ethifin, regulated by Uganda Capital Market Authority, is an Ethical Private Capital Marketplace platform that focuses on sustainable and impact-driven crowd-investments and financing.</p>
+             <p>TIGPE builds and manages agriculture projects and enabling infrastructure and services through investment, propagation and plantation, and processing.<br>Our investment platform, Rubiz, is approved and regulated to serve ordinary people, high-net-worth individuals, corporates and institutions. Rubiz, regulated by Uganda Capital Market Authority, is an Ethical Private Capital Marketplace platform that focuses on sustainable and impact-driven crowd-investments and financing.</p>
           </div>
        </div>
     </div>
@@ -144,7 +144,7 @@
       <div class="card border-0 shadow " style="height: 100%;background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/3.jpg);">
          <div class="card-body" style="color: white;">
             
-            <p>We are best known for our impact investment Rolling Fund which has been operational since 2022. Ethifin offers access to investment opportunities in distinctive and promising businesses while also serving as a platform for entrepreneurs to showcase their ventures to a community of global investors.</p>
+            <p>We are best known for our impact investment Rolling Fund which has been operational since 2022. Rubiz offers access to investment opportunities in distinctive and promising businesses while also serving as a platform for entrepreneurs to showcase their ventures to a community of global investors.</p>
          </div>
       </div>
    </div>
@@ -215,11 +215,11 @@
   <div class="row-md-3 ms-md-end"><img src="images/cofee.jpg" style="height: 300px; width: 300px; border-radius: 50%;"></div>
   <div class="col-md-3 ms-md-4">
     <h1>Accessibility</h1>
-    <p>With our Ethifin you have the opportunity to participate in investments that were previously perhaps not available to normal investors. </p>
+    <p>With our Rubiz you have the opportunity to participate in investments that were previously perhaps not available to normal investors. </p>
   </div>
   <div class="col-md-3 ms-md-end">
     <h1>Economic Boost</h1>
-    <p>By providing SMEs easier access to capital, Ethifin stimulates the economy by new business formation and strengthening the existing ones.</p>
+    <p>By providing SMEs easier access to capital, Rubiz stimulates the economy by new business formation and strengthening the existing ones.</p>
   </div>
 
 
@@ -251,7 +251,7 @@
   </div>
   <div class="col-md-3 ms-md-end">
     <h1>Agriculture</h1>
-    <p>By providing SMEs easier access to capital, Ethifin stimulates the economy by new business formation and strengthening the existing ones.</p>
+    <p>By providing SMEs easier access to capital, Rubiz stimulates the economy by new business formation and strengthening the existing ones.</p>
   </div>
   <div class="col-md-3 ms-md-end">
     <h1>Business</h1>
