--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                <div class="card-body mr-3 ">
                   <h3>Investment</h3>
                   <img src="images/4.jpg" style="height: 300px;">
-                  <p>Our investment platform, Ethifin offers access to
+                  <p>Our investment platform, Rubiz offers access to
                      investment opportunities in distinctive and promising businesses while also serving as a platform for entrepreneurs 
-                  to showcase their ventures to a community of global investors. We are best known for our impact investment Rolling Fund.</p>
+                  to showcase their ventures to a community of global investors. We are best known for our impact investment Rubiz Rolling Fund.</p>
                      <a class="read_more ye_b5n " href="invest.html"> Read More</a>
                </div>
             </div>
