--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                <div class="card-body mr-3">
                   <h3>Propagation</h3>
                   <img src="images/4.jpg" style="height: 300px;">
-                  <p>TIGPE propagation and plantation operations is set up to produce tissue culture plants of different species of plants covering Bamboo, Horticultural plants, Forestry trees, Herbal Plants, Ornamental Plants and Agricultural Plants that are free from diseases. We support farmers through 
-                     extension services to enable best agronomic practices for improved production</p>
+                  <p>TIGPE propagation operations,TIGPE Nurseries is set up to produce tissue culture plants of different species covering Bamboo, 
+                     Horticultural plants, Forestry trees, Herbal Plants, Ornamental Plants and Agricultural Plants that are free that are true to type and from diseases. </p>
                      <a class="read_more ye_b5n " href="propagation.html"> Read More</a>
                </div>
             </div>
