--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
                <div class="card-body mr-3 ">
                   <h3>Plantation</h3>
                   <img src="images/4.jpg" style="height: 300px;">
-                  <p>We enroll farmers; support them through land preparation; distribute inputs and seedlings; plant with them; ensure post- planting care and long-term maintenance </p>
+                  <p>We enroll farmers; support them through land preparation; distribute inputs and seedlings;
+                      plant with them; ensure post- planting care and long-term maintenance. </p>
                   <a class="read_more ye_b5n " href="plantation.html"> Read More</a>
                </div>
             </div>
@@ -264,9 +265,9 @@
                <div class="card-body mr-3">
                   <h3>Processing</h3>
                   <img src="images/4.jpg" style="height: 300px;">
-                  <p>Our processing operation envisages to develop state-of-the-Art infrastructure & technology in the agro-processing
+                  <p>Our processing operation envisages to develop state-of-the-art infrastructure & technology in the agro-processing
                      industry and facilitate end to end linkage, from the farmer to the consumer.
-                     .</p>
+                     </p>
                      <a class="read_more ye_b5n " href="processing.html"> Read More</a>
                </div>
             </div>
