--- a/index.html
+++ b/index.html
@@ -529,11 +529,11 @@
                   <div class="col-md-4">
                       <h3>QUICK LINKS</h3>
                       <ul class="link_menu">
-                          <li><a href="#">Home</a></li>
+                          <li><a href="index.html">Home</a></li>
                           <li><a href="about.html"> About</a></li>
-                          <li><a href="about.html">About Us</a></li>
-                          <li><a href="register.html">Join Us</a></li>
-                          <li><a href="contact.html">Contact Us</a></li>
+                          <li><a href="propagation.html">Propagation</a></li>
+                          <li><a href="invest.html">Investments</a></li>
+                          <li><a href="contact.html">Get in Touch</a></li>
                       </ul>
                   </div>
                   <div class=" col-md-3">
