--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                       <h3>QUICK LINKS</h3>
                       <ul class="link_menu">
                           <li><a href="index.html">Home</a></li>
-                          <li><a href="about.html"> About</a></li>
+                          <li><a href="about.html"> About Us</a></li>
                           <li><a href="propagation.html">Propagation</a></li>
                           <li><a href="invest.html">Investments</a></li>
                           <li><a href="contact.html">Get in Touch</a></li>
