--- a/index.html
+++ b/index.html
@@ -545,12 +545,12 @@
                           How to Invest<br>
                       </p>
                   </div>
-                  <div class="col-lg-3 offset-mdlg-2     col-md-4 offset-md-1">
+                  <div class="col-lg-3 offset-mdlg-2 col-md-4 offset-md-1">
                       <h3>Contact </h3>
                       <ul class="conta">
-                          <li><i class="fa fa-map-marker" aria-hidden="true"></i>Head office,Amakmoo Place<br> Plot 640-642, Block 275<br>Gombe “A”, Wakiso Town ,Wakiso<br></li>
-                          <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="#"> admin@tigpe.org</a></li>
-                          <li><i class="fa fa-mobile" aria-hidden="true"></i>Phone: 256 (0) 772200707</li>
+                        <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:admin@tigpe.org"> admin@tigpe.org</a></li>
+                        <li><i class="fa fa-mobile" aria-hidden="true"></i> +256 (0) 200907036</li>
+                          <li><i class="fa fa-map-marker" aria-hidden="true"></i>Amakmoo Place Plot 640-642, Block 275 Gombe “A”, Wakiso Town</li>  
                       </ul>
                       <ul class="social_icon">
                           <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
