--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <h3>Propagation</h3>
                   <img src="images/4.jpg" style="height: 300px;">
                   <p>TIGPE propagation operations,TIGPE Nurseries is set up to produce tissue culture plants of different species covering Bamboo, 
-                     Horticultural plants, Forestry trees, Herbal Plants, Ornamental Plants and Agricultural Plants that are free that are true to type and from diseases. </p>
+                     Horticultural plants, Forestry trees, Herbal Plants, Ornamental Plants and Agricultural Plants that are true to type and free from diseases</p>
                      <a class="read_more ye_b5n " href="propagation.html"> Read More</a>
                </div>
             </div>
