--- a/processing.html
+++ b/processing.html
@@ -84,15 +84,18 @@
             <!-- <li class="nav-item active ">
                <a class="nav-link ml-3" href="index.html">Investments <span class="sr-only">(current)</span></a>
             </li> -->
-
             <li class="nav-item active">
-               <a class="nav-link" href="propagation.html">Propagation & Plantation</a>
-            </li>
-
-            <li class="nav-item active">
-               <a class="nav-link" href="processing.html">Processing</a>
-            </li>
-
+                <a class="nav-link" href="propagation.html">Propagation</a>
+             </li>
+ 
+             <li class="nav-item active">
+                <a class="nav-link" href="plantation.html">Plantation</a>
+             </li>
+             
+             <li class="nav-item active">
+                <a class="nav-link" href="processing.html">Processing</a>
+             </li>
+             
             <li class="nav-item active">
                <a class="nav-link" href="contact.html">Get in Touch</a>
             </li>
