--- a/processing.html
+++ b/processing.html
@@ -328,6 +328,7 @@
    
     <!-- end footer -->
     <!-- Javascript files-->
+    <script src="js/faq.js"></script>
     <script src="header.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
