--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="about.html">About Us</a>
                   <a class="dropdown-item" href="#">Impact</a>
-                  <a class="dropdown-item" href="#">New</a>
                   <a class="dropdown-item" href="partner.html">Partners</a>
+                  <a class="dropdown-item" href="faq.html">FAQ</a>
                </div>
 
             </li>
