--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       </div>
       
    </div>
-   <div style="background-image: url('images/4.jpg'); background-size: cover; height: 430px;" class="m-5 w-75 mx-auto">
+   <!-- <div style="background-image: url('images/4.jpg'); background-size: cover; height: 430px;" class="m-5 w-75 mx-auto">
       <div style="padding: 180px 0 0 10px;">
 
          <h2 style="color: #fff;">Questions We are Here to Help</h2>
@@ -348,7 +348,7 @@
          <button type="button" class="btn btn-outline-warning btn-lg">Read Faq</button>
 
       </div>
-   </div>
+   </div> -->
 
    <!-- projects end-->
    <!-- balance -->
