--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
 
   <!-- topnav start -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
-    <a href="index.html"> <img src="images/log.png" alt="" height=""> &nbsp</a>
+    <a href="index.php"> <img src="images/log.png" alt="" height=""> &nbsp</a>
   
      <!-- <img src="images/logo2.png" style="height: 80px; width: 140px;"> -->
      <!-- <a class="navbar-brand" href="#">Bamboo</a> -->
