--- a/partner.html
+++ b/partner.html
@@ -51,7 +51,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-             <a class="nav-link" href="index.html">Home</a>
+             <a class="nav-link" href="index.php">Home</a>
           </li>
           <!-- <li class="nav-item dropdown ative">
              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
