--- a/plantation.html
+++ b/plantation.html
@@ -156,7 +156,8 @@
                     
                      <h1 style="color: blue;">Plantation</h1>
                      <p>We believe that planting in collaboration with smallholder benefit their families and communities, and the environment too.<br>
-                        Growing bamboo-based agroforestry protects soil from erosion and degradation, captures carbon, and helps prevent the destruction of local, indigenous forests. By turning underutilized land into a network of thriving farmlands and microforests, we can make a massive environmental impact, as well as a profound impact on the lives of the people whose lives are rooted in the land<br>We are currently doing trials of different bamboo-based agroforestry models at our Nursery in Wakiso Town Council, Wakiso and Pilot Plantation in Apoi, Apac. The bamboo-based agroforestry models will be developed along group farming systems for scale and improved production and productivity, enabling small holder farmers to increase their revenues and be more climate SMART and market resilient.
+                        Growing bamboo-based agroforestry protects soil from erosion and degradation, captures carbon, and helps prevent the destruction of local, indigenous forests. By turning underutilized land into a network of thriving farmlands and microforests, we can make a massive environmental impact, as well as a profound impact on the lives of the people whose lives are rooted in the land<br></p>
+                        <p class="mt-4">We are currently doing trials of different bamboo-based agroforestry models at our Nursery in Wakiso Town Council, Wakiso and Pilot Plantation in Apoi, Apac. The bamboo-based agroforestry models will be developed along group farming systems for scale and improved production and productivity, enabling small holder farmers to increase their revenues and be more climate SMART and market resilient.
                         </p>
                   </div>
                </div>
