--- a/contact.html
+++ b/contact.html
@@ -56,35 +56,9 @@
           <li class="nav-item active">
              <a class="nav-link" href="index.php">Home</a>
           </li>
-          <!-- <li class="nav-item dropdown ative">
-             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Company
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="about.html">About Us</a>
-                <a class="dropdown-item" href="#">Impact</a>
-                <a class="dropdown-item" href="partner.html">Partners</a>
-                <a class="dropdown-item" href="faq.html">FAQ</a>
-             </div>
-
-          </li> -->
-          <li class="nav-item dropdown ative">
-             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Investment
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="invest.html">About</a>
-                <a class="dropdown-item" href="faq.html">FAQ</a>
-                <a class="dropdown-item" href="#">Businesses</a>
-                <a class="dropdown-item" href="#">Rolling Fund</a>
-             </div>
-
-          </li>
-          <!-- <li class="nav-item active ">
-             <a class="nav-link ml-3" href="index.html">Investments <span class="sr-only">(current)</span></a>
-          </li> -->
+          <li class="nav-item active">
+           <a class="nav-link" href="invest.html">Invest</a>
+        </li>
 
           <li class="nav-item active">
              <a class="nav-link" href="propagation.html">Propagation</a>
@@ -101,24 +75,9 @@
           <li class="nav-item active">
              <a class="nav-link" href="contact.html">Get in Touch</a>
           </li>
-          <!-- <li class="nav-item active">
-             <a class="nav-link" href="propagation.html">Services</a>
-           </li>
-    
-       
-
-          <li class="nav-item dropdown active">
-             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Resources
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="invest.html">How We Invest</a>
-                <a class="dropdown-item" href="faq.html">FAQ</a>
-             </div>
-
-          </li> -->
-
+          <li class="nav-item active">
+            <a class="nav-link" href="faq.html">FAQ</a>
+         </li>
        </ul>
        <div class="navbar-nav active">
           <a href="login.html" class="nav-item nav-link">Login</a>
@@ -126,7 +85,6 @@
        </div>
     </div>
  </nav>
-
  <!-- top navbar end -->
 
 
