--- a/propagation.html
+++ b/propagation.html
@@ -101,7 +101,7 @@
       </div>
       <div class="container pt-3 mx-auto">
        <div class="row">
-          <div class="col-12 col-sm-8 col-md-6 mb-3 mx-auto"><img src="images/3.jpg" style="height: 400px;"></div>
+          <div class="col-12 col-sm-8 col-md-6 mb-3 mx-auto"><img src="images/p4.jpg" style="height: 400px;"></div>
           <div class="col-12 col-sm-8 col-md-6 mb-3 mx-auto">
    
              <div class="titlepage pl-5"  style="text-align: left;">
